src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Contact_Background__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Background information on the customer the customer&apos;s or any family member&apos;s background is with the government 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_BackgroundInfo&quot;</description>
        <label>Contact Background</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Japan</fullName>
                    <default>true</default>
                    <label>Japan</label>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Italia</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Other country in Europe</fullName>
                </value>
                <value>
                    <fullName>Other country in Southeast Asia</fullName>
                </value>
                <value>
                    <fullName>Other country in Asia</fullName>
                </value>
                <value>
                    <fullName>Other country</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_License_Number__c</fullName>
        <label>Credit License Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_License__c</fullName>
        <label>Credit License</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Own License</fullName>
                </value>
                <value>
                    <fullName>MBFS License</fullName>
                </value>
                <value>
                    <fullName>P.O.S. License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Consent_Happy_Calls__c</fullName>
        <formula>IF(OR(AND(ISPICKVAL( Personal_Abroad_Agreement__c , &apos;Yes&apos;),ISPICKVAL(  Personal_Agreement__c , &apos;Yes&apos;),ISPICKVAL(  Personal_Information_Third_Party_Release__c , &apos;Yes&apos;)),
			AND(ISPICKVAL( Personal_Abroad_Agreement__c , &apos;Yes&apos;),ISPICKVAL(  Personal_Agreement__c , &apos;Yes&apos;)),
			AND(ISPICKVAL( Personal_Information_Third_Party_Release__c , &apos;Yes&apos;),ISPICKVAL(Personal_Agreement__c , &apos;Yes&apos;)),
			AND(ISPICKVAL( Personal_Information_Third_Party_Release__c , &apos;Yes&apos;),ISPICKVAL(  Personal_Abroad_Agreement__c , &apos;Yes&apos;))),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Consent__c</fullName>
        <formula>IF(OR(AND(ISPICKVAL( Agreement_to_commit_info_processing__c, &apos;Yes&apos;),ISPICKVAL( Personal_Agreement__c , &apos;Yes&apos;),ISPICKVAL( Personal_Information_Third_Party_Release__c , &apos;Yes&apos;)),
		AND(ISPICKVAL( Agreement_to_commit_info_processing__c, &apos;Yes&apos;),ISPICKVAL( Personal_Agreement__c , &apos;Yes&apos;)),
		AND(ISPICKVAL( Personal_Information_Third_Party_Release__c , &apos;Yes&apos;),ISPICKVAL(Personal_Agreement__c , &apos;Yes&apos;)),
		AND(ISPICKVAL( Personal_Information_Third_Party_Release__c , &apos;Yes&apos;),ISPICKVAL( Agreement_to_commit_info_processing__c, &apos;Yes&apos;))),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_LastUpdatedDate__c</fullName>
        <label>Customer Attributes UpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle_Phase__c</fullName>
        <label>Customer phase</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Care</fullName>
                    <default>true</default>
                    <label>Care</label>
                </value>
                <value>
                    <fullName>Sales Lead</fullName>
                </value>
                <value>
                    <fullName>Service Lead</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Service Lead</fullName>
                </value>
                <value>
                    <fullName>Discard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Function: Customer Number 
  For Dealer Accounts this field is used for the &quot;DMS magic number&quot;
Used in: Page Layouts, Reports 

Created by: Tony Li    Used by: Tony Li
Attribute in Data Dictionary object Contact is &quot;Contact_MagicNo&quot;</description>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DD_Bonus_Condition__c</fullName>
        <label>DD Bonus Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_bonus__c</fullName>
        <label>DD bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMS_Address__c</fullName>
        <description>DMS address of the customer delivered by GSSN</description>
        <label>DMS Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Customer_ID__c</fullName>
        <label>DMS Customer ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Retailer_ID__c</fullName>
        <description>The info to identify the Account to register MyM Accont.</description>
        <label>DMS Retailer ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRM__c</fullName>
        <label>Dealer Sales Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUPNumber__c</fullName>
        <label>DUP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source_Last_Modified_Date__c</fullName>
        <description>Used by the Merge logic, added as part of Merge requirements</description>
        <label>Data Source Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Source of the contact to find out about us (first time) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DataSource&quot;</description>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer Outlet</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz phone</fullName>
                </value>
                <value>
                    <fullName>Mercedes call</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Benz Owner Hotline</fullName>
                </value>
                <value>
                    <fullName>Maybach call</fullName>
                </value>
                <value>
                    <fullName>Mercedes Call Catalogue</fullName>
                </value>
                <value>
                    <fullName>English Customer Desk</fullName>
                </value>
                <value>
                    <fullName>24 hours Touring Support</fullName>
                </value>
                <value>
                    <fullName>Recall desk</fullName>
                </value>
                <value>
                    <fullName>Model-Year Reference desk</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>Inquiry(i-call)</fullName>
                </value>
                <value>
                    <fullName>Concierge Service(i-call)</fullName>
                </value>
                <value>
                    <fullName>Concierge Service(Mercedes me App)</fullName>
                </value>
                <value>
                    <fullName>Inquiry form(Mercedes me portal)</fullName>
                </value>
                <value>
                    <fullName>Inquiry form(Mercedes me App)</fullName>
                </value>
                <value>
                    <fullName>24 hours Touring Support(b-call)</fullName>
                </value>
                <value>
                    <fullName>Mercedes me connect Consultation</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Letter to Executive</fullName>
                </value>
                <value>
                    <fullName>My Mercedes</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>MCare</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Response Sheet</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Mercedes Magazine Survey</fullName>
                </value>
                <value>
                    <fullName>Mercedes me Tokyo&amp;Osaka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Sub_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subsource of the contact to find out about us (first time) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DataSubSource&quot;</description>
        <label>Data Sub-Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Data_Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Air China</fullName>
                </value>
                <value>
                    <fullName>Jingdong mall</fullName>
                </value>
                <value>
                    <fullName>Taobao station</fullName>
                </value>
                <value>
                    <fullName>Cooperation media</fullName>
                </value>
                <value>
                    <fullName>China telecom / 189 mailbox</fullName>
                </value>
                <value>
                    <fullName>Dunhill</fullName>
                </value>
                <value>
                    <fullName>D&amp;G</fullName>
                </value>
                <value>
                    <fullName>HUGO BOSS</fullName>
                </value>
                <value>
                    <fullName>Bank of communications</fullName>
                </value>
                <value>
                    <fullName>TNT</fullName>
                </value>
                <value>
                    <fullName>Axciom</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz interactive community</fullName>
                </value>
                <value>
                    <fullName>ML web special</fullName>
                </value>
                <value>
                    <fullName>B web special</fullName>
                </value>
                <value>
                    <fullName>Sina Blog</fullName>
                </value>
                <value>
                    <fullName>SMART official website</fullName>
                </value>
                <value>
                    <fullName>Bitauto</fullName>
                </value>
                <value>
                    <fullName>E web special</fullName>
                </value>
                <value>
                    <fullName>Pcauto</fullName>
                </value>
                <value>
                    <fullName>Baidu</fullName>
                </value>
                <value>
                    <fullName>GLK web special</fullName>
                </value>
                <value>
                    <fullName>Interaction through</fullName>
                </value>
                <value>
                    <fullName>SoHu</fullName>
                </value>
                <value>
                    <fullName>SNS</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz website _ pre-sale</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz _ contact us _ test drive</fullName>
                </value>
                <value>
                    <fullName>Mercedes - Benz _ contact us _ star gruppo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_ABN__c</fullName>
        <label>ABN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ACN__c</fullName>
        <label>ACN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_AMGPerformance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealer AMGPerformance Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_AS_Default_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The after sales default flag for dealer</description>
        <label>Dealer AS Default Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Account_No_Dlr_Code__c</fullName>
        <label>Account No. Dlr Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Flag for this dealer
Attribute in Data Dictionary object Dealer is &quot;Dealer_ActiveFlag&quot;</description>
        <label>Dealer Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Active_from__c</fullName>
        <label>Dealer Active from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Active_to__c</fullName>
        <label>Dealer Active Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_Addition_CN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 2 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address additional value (for example, disctrict) (Chinese) from GSSN
*/</description>
        <label>Dealer Address Addition Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_Addition_EN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 4 
Used in: Pagelayouts, Reports 
Modify History
Modify By: Lio Huang
Modify Reason: Dealer Address additional value (for example, disctrict) (Chinese) from GSSN 
*/
Only used for Dealer Address from GSSN</description>
        <label>Dealer Address Addition EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_CN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 1 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address (Chinese) from GSSN
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_AddressCN&quot;</description>
        <label>Dealer Address Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Address_EN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main address field, line 3 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Lio Huang
Modify Reason: Dealer Address (Chinese) from GSSN
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_AddressEN&quot;</description>
        <label>Dealer Address EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Aftersales_Manager_Email__c</fullName>
        <label>Dealer Aftersales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Aftersales_Manager__c</fullName>
        <label>Dealer Aftersales Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Allocation__c</fullName>
        <label>Dealer Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MBAuP</fullName>
                </value>
                <value>
                    <fullName>MBFS</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Alternate_Name__c</fullName>
        <description>Alternate Dealer Name is populated by the GSSN interface
Allows up to 240 characters

/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer&apos;s name in Chinese
Used in: Page Layouts, Reports 

Modify History 
Modify By:  Lio,Tulipe, Rob - 
Modify Reason:  Will use this for the Dealer name in English
Populated by GSSN for the Dealer
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_NameEN&quot;</description>
        <inlineHelpText>Alternate Dealer Name is populated by the GSSN interface
Allows up to 240 characters</inlineHelpText>
        <label>Dealer Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Anti_bribery_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anti Bribery Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_BSB__c</fullName>
        <label>BSB</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_BTLInfo__c</fullName>
        <description>Will be used for a query like this one:
select ID from account where BTLInfo &lt;&gt; &quot;123456789&quot;</description>
        <label>Dealer BTLInfo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank_Account_No__c</fullName>
        <label>Bank Account No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Bank__c</fullName>
        <label>Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Business_Hours__c</fullName>
        <description>Attribute in Data Dictionary object Dealer is &quot;Dealer_BusinessHours&quot;</description>
        <label>Dealer Business Hours</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_CMS_Dealer_BPID_LCV__c</fullName>
        <label>CMS Dealer BPID LCV</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_CRM_Manager_Email__c</fullName>
        <label>Dealer CRM Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_CRM_Manager__c</fullName>
        <label>Dealer CRM Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_Car_Service_Region__c</fullName>
        <label>Car Service Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>STHN</fullName>
                </value>
                <value>
                    <fullName>Eastern Region</fullName>
                </value>
                <value>
                    <fullName>NTHN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Cars_Dlr_Class_After_Sales__c</fullName>
        <label>Cars Dlr Class After Sales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Designated</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Cars_Dlr_Class_Sales__c</fullName>
        <label>Cars Dlr Class Sales</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NORMAL</fullName>
                </value>
                <value>
                    <fullName>SATELLITE</fullName>
                </value>
                <value>
                    <fullName>AUTHORIZEDFACTORY</fullName>
                </value>
                <value>
                    <fullName>Metro</fullName>
                </value>
                <value>
                    <fullName>Provincial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Cars_OES_Survey_Targets_Yearly__c</fullName>
        <label>Cars OES Survey Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_PES_Targets_Yearly__c</fullName>
        <label>Cars PES Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Cars_POV_Targets_Yearly__c</fullName>
        <label>Cars POV Targets - Yearly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_City_EN__c</fullName>
        <description>Changed from the name city
Attribute in Data Dictionary object Dealer is &quot;Dealer_CityEN&quot;</description>
        <label>Dealer City EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Competitors__c</fullName>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alfa</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Chrysler</fullName>
                </value>
                <value>
                    <fullName>Citroen</fullName>
                </value>
                <value>
                    <fullName>DAF</fullName>
                </value>
                <value>
                    <fullName>Dodge</fullName>
                </value>
                <value>
                    <fullName>Ferrari</fullName>
                </value>
                <value>
                    <fullName>Fiat Cars</fullName>
                </value>
                <value>
                    <fullName>Fiat Trucks</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Fuso</fullName>
                </value>
                <value>
                    <fullName>Great Wall</fullName>
                </value>
                <value>
                    <fullName>Hamelex White</fullName>
                </value>
                <value>
                    <fullName>Hardi</fullName>
                </value>
                <value>
                    <fullName>Hino</fullName>
                </value>
                <value>
                    <fullName>Holden</fullName>
                </value>
                <value>
                    <fullName>Honda</fullName>
                </value>
                <value>
                    <fullName>Hummer</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Isuzu</fullName>
                </value>
                <value>
                    <fullName>Iveco</fullName>
                </value>
                <value>
                    <fullName>Jaguar</fullName>
                </value>
                <value>
                    <fullName>Jeep</fullName>
                </value>
                <value>
                    <fullName>John Deere</fullName>
                </value>
                <value>
                    <fullName>Keenan</fullName>
                </value>
                <value>
                    <fullName>Kenworth</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager_Email__c</fullName>
        <description>Email of Complaint Manager from GSSN</description>
        <label>Dealer Complaint Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Complaint_Manager__c</fullName>
        <description>Dealer Sales Contact - updated by the GSSN system 
Read only in SFDC 
Rich text field with : Name (Chinese + English), Phone and Email</description>
        <label>Dealer Complaint Manager</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_AS_Code_2__c</fullName>
        <label>Dealer DMS AS Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_AS_Code__c</fullName>
        <label>Dealer DMS AS Code 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_CRM_Code_2__c</fullName>
        <description>Used for dealer mapping</description>
        <label>Dealer DMS CRM Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_CRM_Code__c</fullName>
        <description>Used for dealer mapping</description>
        <label>Dealer DMS CRM Code 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_SR_Code_2__c</fullName>
        <label>Dealer DMS SR Code 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_DMS_SR_Code__c</fullName>
        <label>Dealer DMS SR Code 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>